2007-12-27 Dietmar Warning
 * src/spicelib/devices/*/*init.c: No usage of C99 Designated Initializers
 * src/spicelib/devices/*/*par.c: only formatting issues
 * src/frontend/numparam/*.c: fixing memory problems in nupa_substitute and other
 * src/frontend/dotcard.c: strip white spaces only inside parens
 * src/misc/missing_math.*: AlmostEqualUlps in double is needed

2007-12-26 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/numparam/*: downgraded all files to standard C syntax with 
   the included washprog.c tool.

2007-12-14 Dietmar Warning
 * configure.in, src/spicelib/devices/dev.c: allow mingw build w/o GUI

2007-12-14 Holger Vogt
 * src/frontend/runcoms.c, runcoms2.c: fix the filetype problem if set in spinit

2007-12-15 Steven Borley
 * Added automake warning and output verbosity to autogen.sh
 * src/frontend/spiceif.c: Avoid invalid lvalue assignment errors when
   calling the macro _foo(). Needed for gcc4 which no longer supports
   lvalue cast bogosity. Fixes bug 1584784.

2007-12-14  Steven Borley
 * Added missing .cvsignore file to the tests directories and some
   devices directories, and updated for change from makeidx to ngmakeidx

2007-12-13 Steven Borley
 * Fixed(?) missing files error when autogen.sh is run (with no adms)
  - configure.in:  removed adms directors from AC_CONFIG_FILES list
 * Fixed inclusion of termcap header
  - configure.in:  add check for <termcap.h> to <ncurses/termcap.h>
  - frontend/terminal.c: select either <termcap.h> or <ncurses/termcap.h>

2007-12-09 Dietmar Warning
 * src/frontend/numparam/xpression.c: placeholder for agauss (y=nominal_value)
 * src/spicelib/parser/inpdomod.c: if no bsim3 version given then use 3.30

2007-12-09 Holger Vogt
 * src/frontend/wdisp/windisp.c: better prototypes and some cosmetics
 * src/frontend/inpcom.c: change local index to ind to prevent conflict with index function

2007-12-06 Holger Vogt
 * src/frontend/wdisp/windisp.c: show coordinates and gradients, zooming
